<resources>
    <string name="app_name">Android114Homework</string>
    <string name="student_id">22cm0138ホンスンウ</string>
    <string name="set_name"><u>名前を登録してください！</u></string>
    <string name="today_word">今日の英単語</string>
    <string name="today_word_noContent">まだ登録した単語がないですね🥲\n単語を登録してください！</string>
    <string name="to_next_word">＊ボックスをTAPして次の単語へ</string>
    <string name="start">勉強スタート！</string>
    <string name="edit_words"><u>単語帳を編集する</u></string>
    <string name="edit_delete_words"><u>単語の更新・削除</u></string>
    <string name="back"><u>戻る</u></string>
    <string name="back_home"><u>ホームヘ</u></string>
</resources>