<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/customSecondaryWhite"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_id"
        android:textSize="12sp"
        android:textColor="@color/customBlack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_baseline_home_24"
                app:tint="@color/customPrimaryColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_name"
                    android:textSize="14sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/customSecondaryBlack" />

                <ImageView
                    android:id="@+id/setUserName"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                    app:tint="@color/customPrimaryColor" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/main_today_word_bg"
            android:elevation="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/today_word"
                android:textSize="12sp"
                android:fontFamily="@font/medium"
                android:textColor="@color/customSecondaryBlack" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/today_word_noContent"
                android:textSize="18sp"
                android:fontFamily="@font/bold"
                android:textColor="@color/customSecondaryBlack"
                android:gravity="center"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginHorizontal="16dp"
            android:text="@string/to_next_word"
            android:textSize="10sp"
            android:fontFamily="@font/medium"
            android:textColor="@color/customRed" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:text="英単語をランダムで表示"
            android:textSize="12sp"
            android:fontFamily="@font/medium"
            app:buttonTint="@color/customPrimaryColor"
            android:textColor="@color/customSecondaryBlack" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/main_study"
            android:elevation="10dp"
            android:text="@string/start"
            android:textSize="18sp"
            android:fontFamily="@font/bold"
            android:textColor="@color/customWhite"
            android:gravity="center"
            android:padding="8dp" />

        <TextView
            android:id="@+id/editWordsTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:layout_marginHorizontal="16dp"
            android:text="@string/edit_words"
            android:textSize="16sp"
            android:fontFamily="@font/medium"
            android:textColor="@color/customPrimaryColor" />

        <ImageView
            android:id="@+id/editWordsImg"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_menu_book_24"
            app:tint="@color/customPrimaryColor" />



    </LinearLayout>

</LinearLayout>